--- a/templates/forum/previsualization.part.html
+++ b/templates/forum/previsualization.part.html
@@ -1,9 +1,5 @@
 {% load emarkdown %}
-<div class="row" id="previsualisation">
-    <div class="large-12 columns">
-        <div class="panel">
-            <h5>Prévisualisation de votre message</h5>
-            {{ text|emarkdown }}
-        </div>
-    </div>
+<div class="previsualisation">
+    <h5>Prévisualisation de votre message</h5>
+    {{ text|emarkdown }}
 </div>
