--- a/templates/forum/cat_details.html
+++ b/templates/forum/cat_details.html
@@ -1,19 +1,23 @@
 {% extends "forum/base.html" %}
 
+
 {% block title %}
     {{ category.title }}
 {% endblock %}
+
 
 {% block headline %}
     {{ category.title }}
 {% endblock %}
 
+
 {% block breadcrumb %}
-    <li class="current"><a href="javascript:;">{{ category.title }}</a></li>
+    <li>{{ category.title }}</li>
 {% endblock %}
+
 
 {% block content %}
     
-{% include "forum/forums_common.part.html" %}
+	{% include "forum/forums_common.part.html" %}
 
 {% endblock %}
